--- a/AlgoLib/AlgoLib.vcxproj
+++ b/AlgoLib/AlgoLib.vcxproj
@@ -140,8 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\SearchingAlgos.h" />
+    <ClInclude Include="include\SortingAlgos.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SortingAlgos.cpp" />
     <ClCompile Include="src\SearchingAlgos.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
